[package]
name = "ambient-proxy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ambient-proxy"

[[bin]]
path = "src/sample_client.rs"
name = "sample-client"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.4"
bincode = "1.3.3"
config = "0.11"
flume = { version = "0.10", features = ["async"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
quinn = "0.9"
rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"] }
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"]}
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.4.13"
tower-http = { version = "0.3.0", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
