[package]
name = "ambient_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "NAT traversal proxy for Ambient game engine"
repository = "https://github.com/Ambient/AmbientProxy"
keywords = ["ambient", "game-development", "networking", "proxy", "nat-traversal"]
categories = ["game-development"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ambient_proxy"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.4"
bincode = "1.3.3"
bytes = "1.1.0"
config = "0.13"
flume = { version = "0.10", features = ["async"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
quinn = "0.9"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8.5"
rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"] }
serde = { version = "1", features = ["derive"]}
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"]}
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.4.13"
tower-http = { version = "0.3.0", features = ["cors", "fs"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = "0.11.16"
