[package]
name = "ambient_proxy"
version = "0.1.3"
edition = "2021"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "NAT traversal proxy for Ambient game engine"
repository = "https://github.com/Ambient/AmbientProxy"
keywords = ["ambient", "game-development", "networking", "proxy", "nat-traversal"]
categories = ["game-development"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ambient_proxy"
required-features = ["server"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", optional = true }
bincode = "1.3"
bytes = "1.1"
config = { version = "0.13", optional = true }
flume = { version = "0.10", features = ["async"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
quinn = "0.9"
parking_lot = { version = "0.12", features = ["serde"] }
rand = "0.8"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
reqwest = "0.11.16"
serde = { version = "1", features = ["derive"]}
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal"]}
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.3", features = ["cors", "fs"], optional = true }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-log = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
server = [
    "axum",
    "config",
    "tower",
    "tower-http",
    "tracing-bunyan-formatter",
    "tracing-log",
    "tracing-subscriber",
]
